--- a/modelrailwaymanager/ModelRailwayManager.csproj
+++ b/modelrailwaymanager/ModelRailwayManager.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{2F0290F8-143A-44B9-94E1-4804CA0F45A3}</ProjectGuid>
     <OutputType>AppContainerExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>uwp_mvvm_template</RootNamespace>
-    <AssemblyName>uwp_mvvm_template</AssemblyName>
+    <RootNamespace>ModelRailwayManager</RootNamespace>
+    <AssemblyName>ModelRailwayManager</AssemblyName>
     <DefaultLanguage>en-US</DefaultLanguage>
     <TargetPlatformIdentifier>UAP</TargetPlatformIdentifier>
     <TargetPlatformVersion>10.0.14393.0</TargetPlatformVersion>
@@ -17,7 +17,8 @@
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{A5A43C5B-DE2A-4C0C-9213-0A381AF9435A};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <WindowsXamlEnableOverview>true</WindowsXamlEnableOverview>
-    <PackageCertificateKeyFile>uwp_mvvm_template_TemporaryKey.pfx</PackageCertificateKeyFile>
+    <PackageCertificateKeyFile>ModelRailwayManager_TemporaryKey.pfx</PackageCertificateKeyFile>
+    <PackageCertificateThumbprint>60E84888599FAEAAA7050C4FB3896890AE25762F</PackageCertificateThumbprint>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x86'">
     <DebugSymbols>true</DebugSymbols>
@@ -90,17 +91,18 @@
   </PropertyGroup>
   <ItemGroup>
     <!-- A reference to the entire .Net Framework and Windows SDK are automatically included -->
+    <None Include="ModelRailwayManager_TemporaryKey.pfx" />
     <None Include="project.json" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
-    <Compile Include="MainPage.xaml.cs">
+    <Compile Include="Views\MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SecondPage.xaml.cs">
+    <Compile Include="Views\SecondPage.xaml.cs">
       <DependentUpon>SecondPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="ViewModelLocator.cs" />
@@ -109,7 +111,6 @@
     <AppxManifest Include="Package.appxmanifest">
       <SubType>Designer</SubType>
     </AppxManifest>
-    <None Include="uwp_mvvm_template_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Properties\Default.rd.xml" />
@@ -126,19 +127,19 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Page Include="MainPage.xaml">
+    <Page Include="Views\MainPage.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
-    <Page Include="SecondPage.xaml">
+    <Page Include="Views\SecondPage.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\uwp_mvvm_template.shared\uwp_mvvm_template.shared.csproj">
+    <ProjectReference Include="..\modelrailwaymanager.shared\ModelRailwayManager.shared.csproj">
       <Project>{9c7487f5-fa5a-41f5-a335-370bfcea5f7f}</Project>
-      <Name>uwp_mvvm_template.shared</Name>
+      <Name>ModelRailwayManager.shared</Name>
     </ProjectReference>
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
