--- a/modelrailwaymanager.shared/project.json
+++ b/modelrailwaymanager.shared/project.json
@@ -1,5 +1,8 @@
 ﻿{
   "dependencies": {
+    "Microsoft.EntityFrameworkCore": "1.1.2",
+    "Microsoft.EntityFrameworkCore.Sqlite": "1.1.2",
+    "Microsoft.EntityFrameworkCore.Tools": "1.1.1",
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.2.2",
     "MvvmLightLibs": "5.3.0"
   },
