--- a/modelrailwaymanager.shared/ModelRailwayManager.shared.csproj
+++ b/modelrailwaymanager.shared/ModelRailwayManager.shared.csproj
@@ -107,15 +107,17 @@
     <None Include="project.json" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Migrations\20170930143848_InitialMigration.cs" />
-    <Compile Include="Migrations\20170930143848_InitialMigration.designer.cs">
-      <DependentUpon>20170930143848_InitialMigration.cs</DependentUpon>
+    <Compile Include="Migrations\20171007101636_InitialMigration.cs" />
+    <Compile Include="Migrations\20171007101636_InitialMigration.designer.cs">
+      <DependentUpon>20171007101636_InitialMigration.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\DatabaseServiceModelSnapshot.cs" />
-    <Compile Include="Models\Train.cs" />
+    <Compile Include="Models\Locomotive.cs" />
+    <Compile Include="Models\Wagon.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Models\Track.cs" />
     <Compile Include="Services\DatabaseService.cs" />
+    <Compile Include="ViewModels\BaseItemPageViewModel.cs" />
     <Compile Include="ViewModels\TrackViewModel.cs" />
     <Compile Include="ViewModels\MainViewModel.cs" />
     <Compile Include="ViewModels\TrainViewModel.cs" />
