--- a/modelrailwaymanager/ModelRailwayManager.csproj
+++ b/modelrailwaymanager/ModelRailwayManager.csproj
@@ -19,6 +19,10 @@
     <WindowsXamlEnableOverview>true</WindowsXamlEnableOverview>
     <PackageCertificateKeyFile>ModelRailwayManager_TemporaryKey.pfx</PackageCertificateKeyFile>
     <PackageCertificateThumbprint>60E84888599FAEAAA7050C4FB3896890AE25762F</PackageCertificateThumbprint>
+    <AppxAutoIncrementPackageRevision>True</AppxAutoIncrementPackageRevision>
+    <AppxPackageDir>C:\Users\MarkPC\Desktop\</AppxPackageDir>
+    <AppxBundle>Always</AppxBundle>
+    <AppxBundlePlatforms>x86</AppxBundlePlatforms>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x86'">
     <DebugSymbols>true</DebugSymbols>
